<resources>
    <string name="app_name">01 Implicit Intent App</string>
    <string name="email">Email</string>
    <string name="call_phone">Call Phone</string>
    <string name="browser">Browser</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="sms">SMS</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="wifi">Wifi</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="take_picture">Take Picture</string>
    <string name="show_picture">Show Picture</string>
    <string name="picture">Picture</string>
    <string name="share">Share</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="open_browser">Open Browser</string>
    <string name="inputkan_alamat_web">Inputkan alamat web</string>
    <string name="url_wajib_diisi">URL Wajib diisi</string>
    <string name="open_web">Open Web</string>
    <string name="contact">Contact</string>
    <string name="dial_phone">Dial Phone</string>
    <string name="make_a_call">Make a Call</string>
    <string name="inputkan_no_hp">Inputkan No Hp</string>
</resources>
