<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_tts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_to_speech"
        android:layout_marginTop="@dimen/activity_default_margin"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        />

    <Button
        android:id="@+id/btn_call_phone"
        android:text="@string/call_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
       />

    <Button
        android:id="@+id/btn_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browser"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

    <Button
        android:id="@+id/btn_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

    <Button
        android:id="@+id/btn_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

    <Button
        android:id="@+id/btn_audio_recorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_recorder"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

    <Button
        android:id="@+id/btn_wifi"
        android:text="@string/wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"/>

</LinearLayout>