<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CallPhoneActivity">

    <EditText
        android:id="@+id/edt_number_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputkan_no_hp"
        android:inputType="phone"
        android:autofillHints="@string/inputkan_no_hp"/>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_a_call" />

    <Button
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_phone"
        />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        />

</LinearLayout>