<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CameraActivity">

    <Button
        android:id="@+id/btn_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_margin"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btn_show_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:text="@string/show_picture" />

    <Button
        android:id="@+id/btn_share_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:text="@string/share"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_default_margin"
        android:contentDescription="@string/picture" />

</LinearLayout>